--- a/Get-Git-Got/getGitRepo.html
+++ b/Get-Git-Got/getGitRepo.html
@@ -26,7 +26,7 @@
         font-family: FontAwesome;
         }
     </style>
-<script src="git.js"></script>
+<script src="getGitRepo.js"></script>
    
 </head>
 <body>
